AA-67: fixed issue where buttons jump on order statement, as well as user needing to scroll

--- a/src/styles/likertScale.style.css
+++ b/src/styles/likertScale.style.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100vw;
     margin: auto;
-    top: 45vh;
+    top: 40vh;
 }
 
 .likertScale{
